--- a/packages/frontend/public/index.html
+++ b/packages/frontend/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <link href="https://api.fontshare.com/css?f[]=satoshi@400,500,700,900&display=swap" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/clash-display" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
